instance.tf
resource "aws_instance" "public" {
  ami                         = data.aws_ami.amazonlinux.id
  instance_type               = "t2.micro"
  subnet_id                   = aws_subnet.public[0].id
  key_name                    = "main"
  vpc_security_group_ids      = [aws_security_group.public.id]
  associate_public_ip_address = true
  user_data                   = file("user-data.sh")
  tags = {
    name = "${var.env_code}public_instance"
  }

}
resource "aws_instance" "private" {
  ami                    = data.aws_ami.amazonlinux.id
  instance_type          = "t2.micro"
  subnet_id              = aws_subnet.private[0].id
  key_name               = "main"
  vpc_security_group_ids = [aws_security_group.private.id]
  tags = {
    name = "${var.env_code}private_instance"
  }
}
resource "aws_security_group" "public" {
  name        = "${var.env_code}public"
  description = "Allow ssh inbound traffic"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "ssh from our lan"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["${var.myIpAddress}/24"]


  }
  ingress {
    description = "Allow http traffic"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["${var.myIpAddress}/24"]


  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.env_code}public_sg"
  }
}
resource "aws_security_group" "private" {
  name        = "${var.env_code}private"
  description = "Allow ssh inbound traffic from inside the vpc"
  vpc_id      = aws_vpc.main.id

  ingress {
    description = "ssh from VPC"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = [aws_vpc.main.cidr_block]

  }

  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
    ipv6_cidr_blocks = ["::/0"]
  }

  tags = {
    Name = "${var.env_code}private_sg"
  }
}
